--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,21 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
+
+html {
+  background: #0D1D38;
+}
+
 .App {
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  width: 100vw;
+  height: 50vh;
+  background:
+  linear-gradient( rgba(13, 29, 56, .8), rgba(13, 29, 56, .8)),
+  url(http://meganfoxstar.ru/_ph/87/784919443.jpg) center center no-repeat;
+  background-size: cover;
+  font-family: 'Roboto', sans-serif;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.App-wrapper {
+  width: 95%;
 }
