--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ html {
   width: 100vw;
   height: 50vh;
   background:
-  linear-gradient( rgba(13, 29, 56, .8), rgba(13, 29, 56, .8)),
+  linear-gradient(to bottom, rgba(13, 29, 56, .85), rgba(13, 29, 56, .8)),
   url(http://meganfoxstar.ru/_ph/87/784919443.jpg) center center no-repeat;
   background-size: cover;
   font-family: 'Roboto', sans-serif;
@@ -18,4 +18,5 @@ html {
 
 .App-wrapper {
   width: 95%;
+  max-width: 1200px;
 }
