--- a/src/components/BestMovies/BestMovies.module.css
+++ b/src/components/BestMovies/BestMovies.module.css
@@ -18,21 +18,49 @@ h1 {
 }
 
 .bestMovie img {
+    width: 138px;
     border-radius: 10px;
     cursor: pointer;
 }
 
 .bestTitle {
     padding-top: .6rem;
-    font-size: .9rem;
+    font-size: 14px;
     max-width: 9rem;
     cursor: pointer;
 }
 
 .bestYear {
-    font-size: .9rem;
+    font-size: 14px;
     color: #586E94;
     cursor: pointer;
+}
+
+div[class="slick-slider slick-initialized"] {
+    max-width: 945px;
+    margin: 0 auto;
+}
+
+button[class="slick-arrow slick-next"], button[class="slick-arrow slick-next"]:hover, button[class="slick-arrow slick-next"]:focus {
+    background: url(../../assets/img/slidernextarrow.svg) center center no-repeat, #253755;
+    background-size: 10px 25px;
+    padding: 20px;
+    border-radius: 50%;
+}
+
+button[class="slick-arrow slick-next"]:before, button[class="slick-arrow slick-next"]:hover:before, button[class="slick-arrow slick-next"]:focus:before {
+    opacity: 0;
+}
+
+button[class="slick-arrow slick-prev"], button[class="slick-arrow slick-prev"]:hover, button[class="slick-arrow slick-prev"]:focus {
+    background: url(../../assets/img/sliderpreviousarrow.svg) 13px center no-repeat #253755;
+    background-size: 10px 25px;
+    padding: 20px;
+    border-radius: 50%;
+}
+
+button[class="slick-arrow slick-prev"]:before, button[class="slick-arrow slick-prev"]:hover:before, button[class="slick-arrow slick-prev"]:focus:before {
+    opacity: 0;
 }
 
 @media (max-width: 700px) {
@@ -50,12 +78,11 @@ h1 {
     } */
 
     .bestMovie img {
-        width: 92px;
+        width: 86px;
         max-width: 6rem;
     }
 
     .bestTitle {
-        font-size: .75rem;
         max-width: 7rem;
     }
 
