--- a/src/components/BestMovies/BestMovies.module.css
+++ b/src/components/BestMovies/BestMovies.module.css
@@ -2,6 +2,7 @@
     padding: 0 1rem;
     color:#fff;
     font-weight: bold;
+    border-bottom: 1px solid #1E2D48;
 }
 
 .BestMovies * {
@@ -9,8 +10,7 @@
 }
 
 h1 {
-    font-size: 1.1rem;
-    margin-bottom: -1.5rem;
+    margin-bottom: -1rem;
 }
 
 .bestMovie {
