--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -17,7 +17,8 @@ input {
     width: 90%;
     margin: 1rem 0;
     padding: .7rem 1rem;
-    border-radius: 15px;
+    border-radius: 14px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
 }
 
 input::placeholder {
